# a

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_ENGLISH.md  DEPLOYMENT_GUIDE_FIXED.md  DOCKER_CHECKLIST.md  Dockerfile  README.md  docker-compose.yml  main.py  microservice_main.py  pyproject.toml  requirements.txt  test_health.py  test_server.py
.claude/: settings.local.json
src/: __init__.py  integrated_qa.py
src/api/: __init__.py  enhanced_server.py  server.py
src/architecture/: __init__.py  api_gateway.py  microservice_config.py  service_orchestrator.py
src/bm25_cache/: __init__.py  cache.py  enhanced_cache.py  redis_cache.py
src/cli/: __init__.py  arguments.py
src/dialogue_history/: __init__.py  history.py
src/document_loader/: __init__.py  loader.py
src/document_processor/: __init__.py  enterprise_processor.py  processor.py
src/rag_system/: __init__.py  classifier.py  prompt_builder.py  retriever.py
src/security/: __init__.py  authentication.py  middleware.py  security_config.py
src/utils/: __init__.py  error_handling.py
src/vector_store/: __init__.py  enterprise_vector_store.py  milvus_store.py  vectorizer.py
