"""
Dependencies for the Integrated QA System
"""

[project]
name = "integrated-qa-system"
version = "0.1.0"
description = "An integrated RAG-based QA system with BM25 caching and hybrid retrieval"
requires-python = ">=3.10"

dependencies = [
    # Document loading
    "pypdf>=3.0.0",
    "python-pptx>=0.6.21",
    "python-docx>=0.8.11",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",

    # Text processing and chunking
    "langchain>=0.1.0",
    "langchain-text-splitters>=0.0.1",

    # Vectorization and embeddings
    "sentence-transformers>=2.2.0",

    # Vector store
    "chromadb>=0.4.0",
    "pymilvus>=2.3.6",

    # BM25
    "rank-bm25>=0.2.2",

    # LLM integration
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "requests>=2.31.0",  # Added for better HTTP handling

    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # Utilities
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "redis>=4.5.0",
    "aiohttp>=3.8.0",

    # Security and monitoring
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
    "tenacity>=8.2.0",  # For retry mechanisms
    "limits>=3.0.0",    # For rate limiting
    "cryptography>=41.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
